--- a/style.css
+++ b/style.css
@@ -22,3 +22,48 @@ header.masthead {
     display: none;
   }
 }
+
+/* estilos para toogle */
+label {
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 25px;
+    border-radius: 25px;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+label::before {
+    position: absolute;
+    content: '';
+    width: 20px;
+    height: 20px;
+     background-image:
+        linear-gradient(
+        0deg,
+        #ccc,
+        #eee);
+    border-radius: 50%;
+    top: 2.5px;
+}
+
+input+label {
+    background: gray;
+}
+
+input+label::before {
+    left: 5px;
+    content:'spa'
+}
+
+input:checked+label {
+    background: #F1A433;
+}
+
+input:checked+label::before {
+    left: 25px;
+    content:'en'
+}
