--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ header.masthead {
   background-position: center;
   background-size: cover;
 }
+.progress-bar {
+  background-color: #FFED3D;
+}
 #contact {
   text-align: center;
   color: white;
